# QuikPy

./: QuikPy.py  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
Examples/: 01 - Connect.py  01_Connect.py  02 - Accounts.py  02_Accounts.py  03 - Ticker.py  03_Ticker.py  04 - Bars.py  04 - Stream.py  04_Bars.py  05 - Stream.py  05 - Transactions.py  05_Stream.py  06 - Transactions.py  06_Transactions.py  Accounts.py  Bars.py  Connect.py  MultiScripts.py  Stream.py  Ticker.py  Transactions.py
QUIK/lua/: config.json  qsfunctions.lua
QuikPy/: QuikPy.py
