[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuikPy"
version = "2025.11.01"
description = "Библиотека-обертка, которая позволяет получить доступ к функционалу торгового теримнала QUIK из Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  {name = "Чечет Игорь Александрович"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Office/Business :: Financial :: Investment"
]
[project.urls]
Homepage = "https://github.com/cia76/QuikPy"
Repository = "https://github.com/cia76/QuikPy"

[tool.setuptools]
packages = ["QuikPy"]
